Remove the list.reverse command, and print in order each element

--- a/Amilton_Aula01_Git.ipynb
+++ b/Amilton_Aula01_Git.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Amilton-Aula01-Git.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOM9mJqaSDwdgcA3Crxh9vg",
+      "authorship_tag": "ABX9TyOEXZkC1z2Tj0HioSEbaROC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6-MPwVzAsQPg",
-        "outputId": "289a0d86-d770-4ae3-8fc0-f327f582f919"
+        "outputId": "bc72905e-406b-4e68-d50c-4636928ad612"
       },
       "outputs": [
         {
@@ -46,7 +46,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 5
         }
       ],
       "source": [
@@ -62,14 +62,14 @@
       "metadata": {
         "id": "Cq1q2GCssYR_"
       },
-      "execution_count": 2,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "lista.reverse()\n",
-        "lista"
+        "#lista.reverse()\n",
+        "#lista"
       ],
       "metadata": {
         "colab": {
@@ -89,6 +89,34 @@
           },
           "metadata": {},
           "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for num in lista:\n",
+        "  print(num)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XL0rbVfNtJmj",
+        "outputId": "d9b4582c-6a59-4bfd-e77b-06084cd36625"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
         }
       ]
     }
